--- a/index.html
+++ b/index.html
@@ -830,8 +830,7 @@
                 Полипропиленовый погреб-кессон<br/>от производителя
             </div>
             <div class="orange_creative hidden-sm">
-                <a href="http://g-08.ru/landing/" target="_blank"><p>Создание лендинг пейдж</p></a>
-                <p class="orange">Группа 08</p>
+                <p>Сайт сделан в веб-студии</p>              <p class="orange"><a href="https://www.yandex.ru/" target="_blank" style="font-size: 18px; color: rgb(251, 140, 0);">SMART FOX</a></p>
             </div>
             <div class="contacts">
                 <div class="phone">
