--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                 Полипропиленовый погреб-кессон<br/>от производителя
             </div>
             <div class="orange_creative hidden-sm">
-                <p>Сайт сделан в веб-студии</p>              <p class="orange"><a href="https://www.yandex.ru/" target="_blank" style="font-size: 18px; color: rgb(251, 140, 0);">SMART FOX</a></p>
+                <p>Сайт сделан в веб-студии</p>              <p class="orange"><a href="http://smartfox.su/" target="_blank" style="font-size: 18px; color: rgb(251, 140, 0);">SMART FOX</a></p>
             </div>
             <div class="contacts">
                 <div class="phone">
